fixes timeline on mobile

--- a/sites/all/themes/slac/css/style.css
+++ b/sites/all/themes/slac/css/style.css
@@ -11441,6 +11441,9 @@ ul.time-line {
 .card-deck.card {
   display: block; }
 
+.card-img {
+  min-height: 1px; }
+
 /* Paragraph specific. */
 .paragraph {
   clear: both; }
