--- a/sites/all/themes/slac/scss/components/_paragraph-cards.scss
+++ b/sites/all/themes/slac/scss/components/_paragraph-cards.scss
@@ -29,3 +29,7 @@
 .card-deck.card {
   display: block;
 }
+
+.card-img {
+  min-height: 1px;
+}
